           never forced.
    --sba  is an alias for -B/--ba, because -B really
           implies -S and that is not clear from --ba.
    As a consequence of the introduction of --sba, the option
    --sbacc (an alias for --state-based-acceptance) cannot be
    abbreviated as --sba anymore.

  - autfilt learned a --kill-states=NUM[,NUM...] option.

  Library:
  - Spot now provides convenient function to create and solve games.
    The functions are located in twaalgos/game.hh.  Additional
    functions related to the application to reactive synthesis are
    in twaalgos/synthesis.hh.

  - A new class called aig is introduced to represent
    and-inverter-graphs, which is useful for synthesis.

  - Historically, Spot labels automata by Boolean formulas over
    atomic propositions. These Boolean formulas are represented
    as BDDs using the BuDDy library. Since this implementation is
    not thread safe, Spot wasn't able, until now, to integrate
    parallel algorithms. To bypass this limitation, we introduce the
    cube data structure. This structure aims to replace BDDs
    everywhere parallelism is required. Contrary to BDDs, this
    structure is not able to represent complex boolean formulae, but
    can represent very simple disjunctive form of boolean formulae
    and can be used in a multithreaded context.

    Since both the BDD-based and the cube-based implementations have
    benefits and drawbacks, we opted to keep side-by-side the
    historical implementation and the new one. As a consequence:
    twacube and kripkecube are the new versions of twa and kripke.
    We provide conversion back and forth throught the following
    functions: twacube_to_twa, twa_to_twa, product_to_twa, and
    kripkecube_to_twa. The equivalence between a twa and a twacube
    can be checked using are_equivalent.

    In addition to the previous conversion, we implemented various
    state-of-the-art algorithms: bloemen.16.ppopp, bloemen.16.hvc,